--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,34 @@
 {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  "terminal.integrated.fontSize": 50,
+  "editor.fontSize": 50,
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "editor.parameterHints.enabled": false,
+  "editor.inlayHints.enabled": "off",
+  "editor.occurrencesHighlight": false,
+  "editor.selectionHighlight": false,
+  "workbench.colorCustomizations": {
+    "seditor.selectionBackground": "#0000ff",
+    "seditorError.foreground": "#00000000",
+    "seditorWarning.foreground": "#00000000",
+    "seditorInfo.foreground": "#00000000",
+  },
+  "telemetry.telemetryLevel": "off",
+  "editor.minimap.enabled": false,
+  "editor.bracketPairColorization.enabled": false,
+  "editor.wordWrap": "off",
+  "css.lint.emptyRules": "ignore",
+  "terminal.integrated.fontFamily": "Consolas",
+  "terminal.integrated.fontWeight": "normal",
+  "editor.hover.enabled": false,
+  "git.confirmSync": false,
+  "liveServer.settings.AdvanceCustomBrowserCmdLine": "Chrome",
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "python.terminal.activateEnvironment": false,
+  "editor.cursorBlinking": "solid",
+  "editor.lightbulb.enabled": false,
+  "editor.hover.sticky": false,
+  "workbench.editor.enablePreview": false,
+  "git.enableSmartCommit": true,
+  "dart.sdkPath": "C:\\dart-sdk",
 }
